arreglo del conflicto de 2 archivos commit

--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
 	<title>Hello</title>
 </head>
 <body>
-<<<<<<< HEAD
-	<h1>Weolcometela!!</h1>
-=======
-	<h1 style="color:blue;">Weolcometela</h1>
->>>>>>> a408a9f13d7f0b0cdc2b409ae928e4b68f6490d5
+	<h1 style="color:blue;">Weolcometela!!</h1>
 	<h2> HELLOUTELA<h2>
 	Hello, World!
 </body>
