--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 	<title>Hello</title>
 </head>
 <body>
-	<h1 style="color:blue;">Weolcometela!!</h1>
+	<h1 style="color:blue;">Weolcometela!</h1>
 	<h2> HELLOUTELA<h2>
 	Hello, World!
 </body>
